[176270] Split ConnectionProfile extension generated by New ODA Plugin Project Templates

--- a/plugins/org.eclipse.datatools.connectivity.oda.template.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.template.ui/plugin.properties
@@ -19,7 +19,8 @@ This wizard creates a plug-in for an Open Data Access (ODA) data source runtime 
 <p>An ODA runtime driver plug-in does <b>not</b> make contributions to the UI. \
 Do not select the UI contribution check-box under Plug-in Options in the previous page.</p>\
 <p><b>Extension Used</b></p>\
-<li>org.eclipse.datatools.connectivity.oda.dataSource</li>
+<li>org.eclipse.datatools.connectivity.oda.dataSource</li>\
+<li>org.eclipse.datatools.connectivity.connectionProfile</li>
 template.designer.name=ODA Data Source Designer
 template.designer.desc=\
 This wizard creates a plug-in for an Open Data Access (ODA) data source designer. \
