--- a/plugins/org.eclipse.datatools.connectivity.oda.template.ui/templates_oda_3.0/runtimeDriver/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.template.ui/templates_oda_3.0/runtimeDriver/plugin.properties
@@ -1,5 +1,10 @@
 ###############################################################################
-# Copyright (c) 2006 <<Your Company Name here>>
+# Copyright (c) 2007 <<Your Company Name here>>
+#
+###############################################################################
+# Plug-in Configuration
+#
+oda.data.source.id=$odaDataSourceId$
 #
 ###############################################################################
 # NLS String
@@ -8,3 +13,4 @@
 plugin.name=$dataSourceName$ ODA Runtime Driver
 data.source.name=$dataSourceName$
 data.set.name=$dataSetName$
+connection.profile.name=$dataSourceName$ Connection Profile
