[176880] Updates ODA Extensions to support runtime use of connection profile

--- a/plugins/org.eclipse.datatools.enablement.oda.xml.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml.ui/plugin.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2004 Actuate Corporation.
+# Copyright (c) 2004, 2007 Actuate Corporation.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -7,8 +7,12 @@
 #
 # Contributors:
 #  Actuate Corporation  - initial API and implementation
+#
 ###############################################################################
-
+# Plug-in Configuration
+#
+oda.data.source.id=org.eclipse.datatools.enablement.oda.xml
+#
 ###############################################################################
 # NLS String
 ###############################################################################
@@ -16,23 +20,14 @@ oda.xml.datasource=DTP XML DataSource
 oda.xml.dataset=DTP XML DataSet
 oda.xml.tablemapping=Table Mapping
 oda.xml.columnmapping=Column Mapping
-
-oda.data.source.id=org.eclipse.datatools.enablement.oda.xml
-oda.parent.category.id=org.eclipse.datatools.connectivity.oda.profileCategory
 #
 ###############################################################################
 # NLS messages
 #
 plugin.name=DTP XML File Designer
-oda.data.source.name=DTP XML Files
-connection.profile.name=DTP XML File Data Source Connection Profile
 newwizard.name=DTP XML File Data Source
 newwizard.description=Create an DTP XML File connection profile
 wizard.window.title=New XML File Data Source Profile
 wizard.data.source.page.title=Define the URLs to the XML file and schema information
 profile.propertypage.name=DTP XML File Data Source Connection Properties
 preference.datasetpreview=XML Data Set
-#
-#  Below NLS messages apply to all ODA data sources; should be re-factored
-#
-oda.connection.factory.name=ODA Connection Factory
