--- a/plugins/org.eclipse.datatools.enablement.oda.xml/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml/plugin.xml
@@ -66,7 +66,7 @@
             odaVersion="3.0.0"
             driverClass="org.eclipse.datatools.enablement.oda.xml.impl.Driver"
             defaultDisplayName="%datasource.name"
-            id="org.eclipse.datatools.enablement.oda.xml"
+            id="%oda.data.source.id"
             setThreadContextClassLoader="false">
          <properties>
          <propertyGroup
@@ -86,5 +86,24 @@
          </properties>
       </dataSource>
    </extension>
+   
+   <extension
+         point="org.eclipse.datatools.connectivity.connectionProfile">
+      <category
+            id="%oda.data.source.id"
+            name="%oda.data.source.name"
+            parentCategory="%oda.parent.category.id"/>
+      <connectionProfile
+            category="%oda.data.source.id"
+            id="%oda.data.source.id"
+            name="%connection.profile.name"
+            pingFactory="org.eclipse.datatools.connectivity.oda.profile.OdaConnectionFactory"/>
+      <connectionFactory
+            id="org.eclipse.datatools.connectivity.oda.IConnection"
+            name="%oda.connection.factory.name"
+            class="org.eclipse.datatools.connectivity.oda.profile.OdaConnectionFactory"
+            profile="%oda.data.source.id"/>
+   </extension>
+   
 </plugin>
 
