Adjust for automated build

--- a/plugins/org.eclipse.datatools.enablement.hsqldb/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.hsqldb/plugin.properties
@@ -6,8 +6,8 @@ CONNECTION_URL_PROPERTY_NAME=Connection URL
 USER_ID_PROPERTY_NAME=User ID
 PASSWORD_PROPERTY_NAME=Password
 
-Bundle-Vendor = Sybase, Inc.
-Bundle-Name = Hypersonic DB Plug-in
+Bundle-Vendor = Eclipse.org
+Bundle-Name = Eclipse Data Tools Platform Hypersonic DB Enablement Plug-in
 profile.page.name = HSQLDB Profile Properties
 navigator.content.name = HSQLDB Profile Content Extension
 
