Adjust for automated build

--- a/plugins/org.eclipse.datatools.enablement.sybase/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase/build.properties
@@ -7,6 +7,11 @@ bin.includes = META-INF/,\
                .settings/,\
                about.html,\
                schema/,\
-               icons/
+               icons/,\
+               about.ini,\
+               about.mappings,\
+               about.properties,\
+               eclipse32.gif,\
+               eclipse32.png
 jars.compile.order = .
 plugin.version =	1.0.0
