Updating changes to remove catalog loader and implement a factory to simplify removal of stored procedure node

--- a/plugins/org.eclipse.datatools.enablement.hsqldb/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.hsqldb/plugin.xml
@@ -78,13 +78,7 @@
          </properties>
       </driverTemplate>
    </extension>
-   <extension
-         point="org.eclipse.datatools.connectivity.sqm.core.catalog">
-      <catalog
-            product="HSQLDB"
-            provider="org.eclipse.datatools.enablement.hsqldb.catalog.HSQLDBCatalogProvider"
-            version="1.8"/>
-   </extension>
+
    <extension
          point="org.eclipse.datatools.connectivity.connectionProfile">
       <connectionFactory
@@ -142,6 +136,13 @@
             <instanceof value="org.eclipse.datatools.enablement.hsqldb.catalog.HSQLDBCatalogSchema"/>
          </triggerPoints>
       </navigatorContent>
+   </extension>
+   <extension
+         point="org.eclipse.datatools.connectivity.sqm.core.dataModelElementFactory">
+      <factory
+            class="org.eclipse.datatools.enablement.hsqldb.catalog.HSQLDBDataModelElementFactory"
+            product="HSQLDB"
+            version="1.8"/>
    </extension>
 
 </plugin>
