Add icons folder to build

--- a/plugins/org.eclipse.datatools.enablement.hsqldb/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.hsqldb/build.properties
@@ -4,7 +4,8 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                about.html,\
                META-INF/,\
-               .
+               .,\
+               icons/
 jars.compile.order = .
 output.. = bin/
 source.. = src/
