--- a/plugins/org.eclipse.datatools.enablement.sybase.asa/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.asa/build.properties
@@ -9,4 +9,4 @@ bin.includes = META-INF/,\
                runtime/,\
                .settings/
 jars.compile.order = .
-plugin.version =	0.0.2
+plugin.version =	1.0.0.200703151
