--- a/tests/org.eclipse.datatools.connectivity.oda.consumer.testdriver/build.properties
+++ b/tests/org.eclipse.datatools.connectivity.oda.consumer.testdriver/build.properties
@@ -1,4 +1,12 @@
-jars.compile.order = .
-source.. = 
+source.. = src/
+output.. = bin/
 bin.includes = META-INF/MANIFEST.MF,\
-               plugin.xml
+               plugin.xml,\
+               about.html
+javac.debug =            on
+javac.source =           1.4
+javac.target =           1.4
+build.result.dir =	 	 ./
+temp.dir =		         ./tempdir/
+plugin.destination =     ./
+download.dir =           ./download/
