--- a/plugins/org.eclipse.datatools.sqltools.plan/build.xml
+++ b/plugins/org.eclipse.datatools.sqltools.plan/build.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="org.eclipse.datatools.sqltools.plan" default="build.jars" basedir=".">
-
+	<import file="../org.eclipse.datatools.build/common_build.xml" optional="true"/>
+	<property name="module.name" value="org.eclipse.datatools.sqltools.plan"/>
 	<property name="basews" value="${ws}"/>
 	<property name="baseos" value="${os}"/>
 	<property name="basearch" value="${arch}"/>
 	<property name="basenl" value="${nl}"/>
-
+	<property file="build.properties"/>
 	<!-- Compiler settings. -->
 	<property name="javacFailOnError" value="true"/>
 	<property name="javacDebugInfo" value="on"/>
@@ -49,7 +50,7 @@
 		<antcall target="gather.bin.parts">
 			<param name="destination.temp.folder" value="${temp.folder}/"/>
 		</antcall>
-		<zip destfile="${plugin.destination}/org.eclipse.datatools.sqltools.plan_0.9.0.200604101.jar" basedir="${temp.folder}/org.eclipse.datatools.sqltools.plan_0.9.0.200604101" filesonly="false" whenempty="skip" update="false"/>
+		<zip destfile="${plugin.destination}/${module.name}_${plugin.version}.jar" basedir="${temp.folder}/${module.name}_${plugin.version}" filesonly="false" whenempty="skip" update="false"/>
 		<delete dir="${temp.folder}"/>
 		<delete dir="${build.result.folder}/@dot"/>
 	</target>
@@ -119,11 +120,11 @@
 	</target>
 
 	<target name="gather.bin.parts" depends="init" if="destination.temp.folder">
-		<mkdir dir="${destination.temp.folder}/org.eclipse.datatools.sqltools.plan_0.9.0.200604101"/>
-		<copy todir="${destination.temp.folder}/org.eclipse.datatools.sqltools.plan_0.9.0.200604101" failonerror="true" overwrite="false">
+		<mkdir dir="${destination.temp.folder}/${module.name}_${plugin.version}"/>
+		<copy todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="true" overwrite="false">
 			<fileset dir="${build.result.folder}/@dot" includes="**"			/>
 		</copy>
-		<copy todir="${destination.temp.folder}/org.eclipse.datatools.sqltools.plan_0.9.0.200604101" failonerror="true" overwrite="false">
+		<copy todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="true" overwrite="false">
 			<fileset dir="${basedir}" includes="META-INF/,plugin.xml,about.html,schema/,icons/,plugin.properties"			/>
 		</copy>
 	</target>
@@ -132,20 +133,20 @@
 	</target>
 
 	<target name="gather.sources" depends="init,build.sources" if="destination.temp.folder">
-		<mkdir dir="${destination.temp.folder}/org.eclipse.datatools.sqltools.plan_0.9.0.200604101"/>
-		<copy file="${build.result.folder}/src.zip" todir="${destination.temp.folder}/org.eclipse.datatools.sqltools.plan_0.9.0.200604101" failonerror="false" overwrite="false"/>
+		<mkdir dir="${destination.temp.folder}/${module.name}_${plugin.version}"/>
+		<copy file="${build.result.folder}/src.zip" todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="false" overwrite="false"/>
 	</target>
 
 	<target name="gather.logs" depends="init" if="destination.temp.folder">
-		<mkdir dir="${destination.temp.folder}/org.eclipse.datatools.sqltools.plan_0.9.0.200604101"/>
-		<copy file="${temp.folder}/@dot.bin${logExtension}" todir="${destination.temp.folder}/org.eclipse.datatools.sqltools.plan_0.9.0.200604101" failonerror="false" overwrite="false"/>
+		<mkdir dir="${destination.temp.folder}/${module.name}_${plugin.version}"/>
+		<copy file="${temp.folder}/@dot.bin${logExtension}" todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="false" overwrite="false"/>
 	</target>
 
 	<target name="clean" depends="init" description="Clean the plug-in: org.eclipse.datatools.sqltools.plan of all the zips, jars and logs created.">
 		<delete dir="${build.result.folder}/@dot"/>
 		<delete file="${build.result.folder}/src.zip"/>
-		<delete file="${plugin.destination}/org.eclipse.datatools.sqltools.plan_0.9.0.200604101.jar"/>
-		<delete file="${plugin.destination}/org.eclipse.datatools.sqltools.plan_0.9.0.200604101.zip"/>
+		<delete file="${plugin.destination}/${module.name}_${plugin.version}.jar"/>
+		<delete file="${plugin.destination}/${module.name}_${plugin.version}.zip"/>
 		<delete dir="${temp.folder}"/>
 	</target>
 
@@ -168,7 +169,7 @@
 		<delete>
 			<fileset dir="${temp.folder}" includes="**/*.bin${logExtension}"			/>
 		</delete>
-		<zip destfile="${plugin.destination}/org.eclipse.datatools.sqltools.plan_0.9.0.200604101.zip" basedir="${temp.folder}" filesonly="true" whenempty="skip" update="false"/>
+		<zip destfile="${plugin.destination}/${module.name}_${plugin.version}.zip" basedir="${temp.folder}" filesonly="true" whenempty="skip" update="false"/>
 		<delete dir="${temp.folder}"/>
 	</target>
 
