--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/src/org/eclipse/datatools/connectivity/ui/dse/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/src/org/eclipse/datatools/connectivity/ui/dse/resources.properties
@@ -9,38 +9,6 @@
 ##    Sybase, Inc. - initial API and implementation
 ################################################################################ 
 plugin.internal_error=Internal Error - org.eclipse.datatools.connectivity
-#ImportProfilesDialog.btnOverwrite.text=&Overwrite existing connection profiles with same names
-#ExportProfilesDialog.button.text2=&Browse...
-#ExportProfilesDialog.group.text=Select the connection profiles to be exported:
-#ExportProfilesDialog.button.text1=&Deselect all
-#ExportProfilesDialog.button.text=&Select all
-#ImportProfilesDialog.button.text=&Browse...
-#ExportProfilesDialog.label.text=Specify a &file name:
-#ImportProfilesDialog.label.text=Specify a &file name:
-#ImportProfilesDialog.text.text=Note: the connection profile to be imported should be those types you can \n  create using the new connection profile wizard, unsupported types of \n  connection profiles will be discarded.
-#ExportProfilesDialog.null.title=Export Connection Profiles
-#ImportProfilesDialog.null.title=Import Connection Profiles
-#ExportProfilesDialog.btnEncryption.text=Encrypt file content
-#actions.export.noselection = Please select at least one connection profile!
-#actions.export.nofile = Please specify file name!
-#dialog.exception.title = Exception
-#dialog.exception.message = Exception caught: {0}
-#NewCPWizard.title = New Connection Profile
-#IntroductionWizardPage.title = Introduction Page
-#IntroductionWizardPage.intro = This wizard walks through the steps to create a connection profile.
-#CPWizardSelectionPage.title = Wizard Selection Page
-#CPWizardSelectionPage.desc = Select a connection profile type to proceed
-#CPWizardSelectionPage.group = Please select the connection profile type:
-#actions.connect.job = Connect server job
-#actions.connect.uijob = Refreshing View
-#actions.ping.job = Ping server job
-#actions.ping.uijob = Show dialog job
-#actions.connect.title = Connecting to the server...
-#actions.ping.title = Pinging the server...
-#actions.ping.success = Ping succeeded!
-#actions.ping.failure = Ping failed!
-#actions.delete.title = Delete confirmation
-#actions.delete.confirm = Are you sure you want to delete connection profile "{0}"?
 properties.dialog = Properties Dialog
 properties.category.general = General
 properties.connectionprofile.name = Profile Name
@@ -48,18 +16,12 @@ properties.connectionprofile.desc = Description
 properties.connectionprofile.autoconnect = Auto-connect
 properties.category.name = Category Name
 properties.category.id = Category ID
-#ServersView.action.showproperties = &Properties
-#ServersView.action.refresh = &Refresh
-#ServersView.action.newCP = &New...
-#ServersView.action.exportCPs = &Export...
-#ServersView.action.importCPs = &Import...
-#DSE.Connect.label = &Connect
-#DSE.Disconnect.label = &Disconnect
-#DSE.Duplicate.label = Du&plicate
-#DSE.Delete.label = D&elete
-#DSE.Rename.label = Re&name
-#DSE.Refresh.label = Ref&resh
-#DSE.Ping.label = &Ping...
+DSE.Connect.label = &Connect
+DSE.Disconnect.label = &Disconnect
+DSE.SelectAll.label = Select &All
+DSE.DeselectAll.label = &Deselect All
+ServersView.action.newCP = &New...
+ProfileSelectionDialogPage.validation.error = Please select a profile.
 NewConnectionProfileWizard.title = New connection profile
 NewConnectionProfileWizard.create.failure = Create connection profile failure
 NewConnectionProfileWizardPage.Status.DuplicateName = Connection profile name already exists!
@@ -81,16 +43,12 @@ SummaryWizardPage.title = Summary
 SummaryWizardPage.description = Information gathered from previous pages.
 SummaryWizardPage.property = Property
 SummaryWizardPage.value = Value
-#dialog.title.error = Error
-#dialog.title.success = Success
-#rename.dialog.title = Rename Dialog
-#rename.dialog.message = Please input a new connection profile name:
-#rename.dialog.errmsg.existing = Name exists, please input a different one!
-#rename.dialog.errmsg.invalid = Invalid name, please type in a valid name!
 error.connect = {1}.  See log file for more details.
 error.contentExtension =Error connecting to the "{0}" extension on profile "{1}" (Error: {2})
 CPVersionPropertyPage.desc=Version information for {0}.\nThis information was obtained from the last connection attempt.  If the last attempt to connect was unsuccessful, no version information will be available.
 CPVersionPropertyPage.label.versionUnavailable=Version information is unavailable for this profile.
 CPVersionPropertyPage.label.techVersions=The following technologies are available on this server:
 ConnectionProfileLabelProvider.label.versionIndicator={0} ({1} v. {2}) 
-#DSE.Refresh.label = Ref&resh
+ProfileSelectionDialog.Dialog.Title=Profile Browse
+ProfileSelectionDialog.Title=Select an available profile
+ProfileSelectionDialog.Message=Select from the list of available profiles.
