--- a/plugins/org.eclipse.datatools.modelbase.sql.edit/build.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql.edit/build.properties
@@ -3,7 +3,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.9 2007/02/16 20:10:55 dpchou Exp $
+# $Id: build.properties,v 1.10 2007/02/20 15:08:09 jgraham Exp $
 #
 ##################################################################
 source.. = src/
@@ -16,7 +16,7 @@ bin.includes = META-INF/,\
                plugin.properties
 
 src.dir =		src/
-plugin.version =	1.0.0.200702161
+plugin.version =	1.0.0.200703231
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
