CheckIn:Fix bugzilla bug 152443Support boolean type in data set

--- a/plugins/org.eclipse.datatools.enablement.oda.xml/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml/plugin.properties
@@ -17,6 +17,8 @@ oda.parent.category.id=org.eclipse.datatools.connectivity.oda.profileCategory
 ###############################################################################
 # NLS String
 ###############################################################################
+oda.data.source.category.name=DTP XML Data Source
+
 datasource.name=DTP XML Data Source
 dataset.name=DTP XML Data Set
 
