--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/plugin.xml
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/plugin.xml
@@ -90,7 +90,7 @@
             visible="false">
          <action
                class="org.eclipse.datatools.sqltools.sqlscrapbook.actions.OpenScrapbookAction"
-               icon="icons/qrydoc.gif"
+               icon="images/qrydoc.gif"
                id="org.eclipse.datatools.sqltools.sqlscrapbook.actions.OpenScrapbookAction"
                label="Open SQL Scrapboo&amp;k"
                toolbarPath="group.sqleditor.open"
