[164933] Better integrate CP repository framework with existing UI.  Added new repository wizard.  Add ability to specify repository in new CP wizard.  Display repository profiles as root nodes in the DSE.  Add synthetic root for the local workspace repository if other repositories exist.  Add drag and drop support for move/copy of CPs between repositories.

--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.properties
@@ -20,6 +20,8 @@ DSE.Refresh.label = Ref&resh
 DSE.Ping.label = &Ping...
 DSE.AddCP.label = &New Connection Profile
 DSE.AddCP.tooltip = New Connection Profile
+DSE.AddRepo.label = New Connection Profile &Repository
+DSE.AddRepo.tooltip = Create a new connection profile repository
 DSE.Import.label = &Import
 DSE.Import.tooltip = Import
 DSE.Export.label = &Export
