--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -23,6 +23,7 @@ ImportProfilesDialog.null.title=Import Connection Profiles
 ExportProfilesDialog.btnEncryption.text=Encrypt file content
 actions.export.noselection = Please select at least one connection profile!
 actions.export.nofile = Please specify file name!
+actions.export.norepository = Please specify a target repository!
 actions.export.notvalidfile = Please specify a valid file name and path!
 dialog.exception.title = Exception
 dialog.exception.message = Exception caught: {0}
@@ -58,6 +59,7 @@ NewConnectionProfileWizard.title = New connection profile
 NewConnectionProfileWizard.create.failure = Create connection profile failure
 NewConnectionProfileWizardPage.Status.DuplicateName = Connection profile name already exists!
 NewConnectionProfileWizardPage.Status.NoName = Please specify connection profile name!
+NewConnectionProfileWizardPage.Status.NoRepository = Please specify a repository.
 NewConnectionProfileWizardPage.title = Create connection profile
 NewConnectionProfileWizardPage.desc = Please enter detailed information
 NewConnectionProfileWizardPage.cp_name = Name:
@@ -68,6 +70,8 @@ NewConnectionProfileWizardPage.summary_cp_desc = Description
 NewConnectionProfileWizardPage.Button.AutoConnect = Auto-connect when the wizard is finished or when Data Source Explorer opens.
 NewConnectionProfileWizardPage.Button.AutoConnect1 = Auto-connect when Data Source Explorer opens.
 NewConnectionProfileWizardPage.summary_autoconnect = Auto connect
+NewConnectionProfileWizardPage.localRepository = Create in workspace repository (local)
+NewConnectionProfileWizardPage.chooseRepository = Choose repository:
 ConnectionProfileDetailsPage.Button.TestConnection = &Test Connection
 ConnectionProfileDetailsPage.AskConfirmation = Confirm Dialog
 ConnectionProfileDetailsPage.AskReconnect = This connection profile\'s connection information has been changed, do you want to reconnect the server?
@@ -88,6 +92,7 @@ CPVersionPropertyPage.label.versionUnavailable=Version information is unavailabl
 CPVersionPropertyPage.label.techVersions=The following technologies are available on this server:
 ConnectionProfileSummaryPage.button.testConnection=&Test Connection
 CommonLabelProviderBase.label.version={0} ({1} v. {2}) 
+CommonLabelProviderBase.label.localRepository=Workspace Repository (Local)
 
 properties.connectionprofile.type = Profile Type
 DSE.Refresh.label = Ref&resh
@@ -96,10 +101,16 @@ CPDeleteChange.name = Delete {0} Connection Profile
 CPDeleteChange.error.ProfileDoesNotExist = The connection profile you are trying to delete does not exist.
 CPDeleteChange.delete.failure = Failed to delete connection profile.
 CPDeleteProcessor.name = DTP Connectivity Delete Processor
-CPDuplicateProcessor.name = DTP Connectivity Duplicate Processor
+CPDuplicateProcessor.name = DTP Connection Profile Duplicate Processor
 CPCopyChange.name = Duplicate {0} Connection Profile
 CPCopyChange.error.ProfileDoesNotExist = The connection profile you are trying to duplicate does not exist.
 CPCopyChange.title.error = Failed to duplicate connection profile.
+CPCopyChange.error.InvalidTarget = The specified target is not a valid connection profile repository.
+CPCopyChange.error.RepositoryNotConnected = Not connected to the target connection profile repository {0}.
+CPMoveProcessor.name = DTP Connection Profile Move Processor
+CPMoveChange.name = Move {0} Connection Profile
+CPMoveChange.error.ProfileDoesNotExist = The connection profile you are trying to move does not exist.
+CPMoveChange.title.error = Failed to move connection profile.
 CPCreateChange.name = Create {0} Connection Profile
 CPCreateChange.error.NewProfileDoesNotHaveName = A name is required to create the new connection profile.
 CPCreateChange.error.NewProfileAlreadyExists = A connection profile with the new name already exists.
