--- a/plugins/org.eclipse.datatools.connectivity.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/plugin.properties
@@ -17,6 +17,8 @@ Extension.PropertyPage.Version.Name = Version
 ProfileFailure = Data Source Explorer Failures
 Extension.NewWizard.Name = Connection Profile
 Extension.NewWizard.Description = Create a connection profile
+Extension.NewRepositoryWizard.Name = Connection Profile Repository
+Extension.NewRepositoryWizard.Description = Create a new repository for connection profiles
 datatools.preference.page.name=Connectivity
 drivers.preference.page.name = Driver Definitions
 category.name.connectionProfiles = Connection Profiles
