[No BZ] Fixing issue with missing db definition file in jarred plug-in

--- a/plugins/org.eclipse.datatools.enablement.hsqldb/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.hsqldb/build.properties
@@ -5,12 +5,13 @@ bin.includes = plugin.xml,\
                about.html,\
                META-INF/,\
                .,\
-               icons/
+               icons/,\
+               runtime/
 jars.compile.order = .
 output.. = bin/
 source.. = src/
 src.dir			 = src/
-plugin.version =	1.0.0.200703221
+plugin.version =	1.0.0.200704021
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
