[174102] Safely handle loading of connection profiles managed by unknown providers.

--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
@@ -45,3 +45,5 @@ trace.error.propertiesPersistenceHookSaveError = Error invoking properties persi
 trace.error.propertiesPersistenceHookLoadError = Error invoking properties persistent hook; transient properties not set (profile={0}, extension={1})
 
 DriverUtil.taskName = Procesing Classes in {0}
+
+Category.Name.Unknown=Unsupported
