[121957] Allow user to connect from connection profile version property page so that the version information can be updated directly from the property page.

--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -88,6 +88,7 @@ rename.dialog.errmsg.invalid = Invalid name, please type in a valid name!
 error.connect = {1}.  See log file for more details.
 error.contentExtension =Error connecting to the "{0}" extension on profile "{1}" (Error: {2})
 CPVersionPropertyPage.desc=Version information for {0}.\nThis information was obtained from the last connection attempt.  If the last attempt to connect was unsuccessful, no version information will be available.
+CPVersionPropertyPage.button.updateVersion=Connect and Update Version Information
 CPVersionPropertyPage.label.versionUnavailable=Version information is unavailable for this profile.
 CPVersionPropertyPage.label.techVersions=The following technologies are available on this server:
 ConnectionProfileSummaryPage.button.testConnection=&Test Connection
