CheckIn: Fix bugzilla bug 166007. Report is not able to fetch all items from XML data source file

--- a/plugins/org.eclipse.datatools.enablement.oda.xml/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml/plugin.properties
@@ -23,6 +23,7 @@ datasource.name=DTP XML Data Source
 dataset.name=DTP XML Data Set
 
 datasource.property.xmlFile=XML Data Source File
+datasource.property.xmlEncoding=XML Date Source Encoding
 datasource.property.schemaFile=XML Schema File
 oda.data.source.name=DTP XML Files
 connection.profile.name=DTP XML File Data Source Connection Profile
