--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/SQLEditorResources.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/SQLEditorResources.properties
@@ -33,6 +33,7 @@ SQLEditor_outlinePage_sqlSegment_titlePattern=position {0}
 ## Resources for the database connection management
 
 SQLEditor_connection_status_noConnection = No connection
+SQLEditor_file_deleted_or_not_accessible=The original file "{0}" has been deleted or is not accessible.
 #SQLEditor_connection_errorDialog_title   = Connection Exception
 #SQLeditor_connection_errorDialog_message = Connection has failed_ The following error was reported:\n"{0}"
 
@@ -63,6 +64,8 @@ SQLEditorStorage_default_name=Scrapbook
 
 SQLEditor_status_profile=Current profile: {0}, 
 SQLEditor_status_database=Database: {0},
+SQLEditor_problem_save_as=Problems During Save As...
+SQLEditor_could_not_save_as=Save could not be completed. {0}
 SQLEditor_status_dbType=Database type: {0},
 SQLEditor_save_message="Save" will deploy the stored procedure to database
 SQLEditor_status_profile_connected=connected
