update lucene classpath

--- a/plugins/org.eclipse.datatools.sqltools.result/build.xml
+++ b/plugins/org.eclipse.datatools.sqltools.result/build.xml
@@ -54,6 +54,7 @@
             <include name="org.eclipse.debug.*.jar"/>
 			<include name="org.eclipse.emf.common*.jar"/>
 			<include name="org.eclipse.emf.ecore*.jar"/>
+			<include name="org.apache.lucene*.jar"/>
         </fileset>		
 		<fileset dir="${eclipse.home}/plugins">
 			<!-- Include expanded plug-ins -->
