[181101] Hooks to support migration of connection profiles from product release to product release, as necessary

--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
@@ -43,6 +43,11 @@ error.savedriversxml = Error saving driver definition data.
 trace.error.propertiesPersistenceHook = Could not load propertiesPersistenceHook, using default (profile type={0}, extension={1})
 trace.error.propertiesPersistenceHookSaveError = Error invoking properties persistent hook; persisting all properties (profile={0}, extension={1})
 trace.error.propertiesPersistenceHookLoadError = Error invoking properties persistent hook; transient properties not set (profile={0}, extension={1})
+trace.error.migration = Error loading migration element for connection profile provider (id={0}, migration class={1})
+
+migration.error.providerDoesNotExist = Error loading migration element: specified newProviderID is invalid (newProviderID={0})
+migration.error.invalidPropertyMigrationElement = Error loading migration element: propertyMigration must specify a newPropertyKey, an oldPropertyKey or both
+migration.error.unknownParentElement = Error loading migration element: unknown parent element (parent element name={0})
 
 DriverUtil.taskName = Procesing Classes in {0}
 
