[173567] MySQL 5.0, 5.1, 5.2 driver templates

--- a/plugins/org.eclipse.datatools.enablement.mysql/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.mysql/plugin.xml
@@ -35,4 +35,55 @@
             class="org.eclipse.datatools.enablement.mysql.ddl.MySqlDdlGenerator">
         </generator>
     </extension>
+	
+	 <extension
+        point="org.eclipse.datatools.connectivity.sqm.core.catalog">
+        <catalog
+            version="5.0"
+            product="MySql"
+            provider="org.eclipse.datatools.enablement.mysql.catalog.MySqlCatalogProvider">
+        </catalog>
+    </extension>
+    <extension
+        point="org.eclipse.datatools.connectivity.sqm.core.ddlGeneration">
+        <generator
+            version="5.0"
+            product="MySql"
+            class="org.eclipse.datatools.enablement.mysql.ddl.MySqlDdlGenerator">
+        </generator>
+    </extension>
+	
+	 <extension
+        point="org.eclipse.datatools.connectivity.sqm.core.catalog">
+        <catalog
+            version="5.1"
+            product="MySql"
+            provider="org.eclipse.datatools.enablement.mysql.catalog.MySqlCatalogProvider">
+        </catalog>
+    </extension>
+    <extension
+        point="org.eclipse.datatools.connectivity.sqm.core.ddlGeneration">
+        <generator
+            version="5.1"
+            product="MySql"
+            class="org.eclipse.datatools.enablement.mysql.ddl.MySqlDdlGenerator">
+        </generator>
+    </extension>
+	
+	 <extension
+        point="org.eclipse.datatools.connectivity.sqm.core.catalog">
+        <catalog
+            version="5.2"
+            product="MySql"
+            provider="org.eclipse.datatools.enablement.mysql.catalog.MySqlCatalogProvider">
+        </catalog>
+    </extension>
+    <extension
+        point="org.eclipse.datatools.connectivity.sqm.core.ddlGeneration">
+        <generator
+            version="5.2"
+            product="MySql"
+            class="org.eclipse.datatools.enablement.mysql.ddl.MySqlDdlGenerator">
+        </generator>
+    </extension>
 </plugin>
